# mcclone

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json
src/: CMakeLists.txt  CameraControlSystem.cpp  CameraMovementSystem.cpp  CameraMovementSystem.h  ChunkLoadingSystem.h  ChunkManager.cpp  ChunkManager.h  ChunkRenderSystem.cpp  ChunkRenderSystem.h  Component.h  ComponentPool.h  DebugInfoSystem.cpp  DebugInfoSystem.h  EntityAdmin.cpp  EntityAdmin.h  EntityAdmin.tpp  InputManager.cpp  InputManager.h  Material.h  PlayerControlSystem.cpp  PlayerControlSystem.h  RenderComponent.h  RenderSystem.cpp  RenderSystem.h  System.h  SystemList.cpp  SystemList.h  TransformComponent.h  Vertex.h  WorldChunk.cpp  WorldChunk.h  main.cpp  solid_color_frag.glsl  utils.h
src/components/: BoxColliderComponent.h  CameraComponent.h  CameraControlComponent.h  Component.h  InputComponent.h  MovementComponent.h  PhysicsComponent.h  PlayerControlComponent.h  TransformComponent.h
src/entity/: EntityAdmin.cpp  EntityAdmin.h  EntityAdmin.tpp
src/entity/components/: BlockComponent.h  BoxColliderComponent.h  CameraComponent.h  CameraControlComponent.h  DirectionalLightComponent.h  PhysicsComponent.h  PlayerControlComponent.h
src/entity/systems/: BoxColliderMovementSystem.cpp  BoxColliderMovementSystem.h  CameraControlSystem.cpp  CameraControlSystem.h  CameraMovementSystem.cpp  CameraMovementSystem.h  CollisionSystem.cpp  CollisionSystem.h  MovementSystem.cpp  MovementSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PlayerControlSystem.cpp  PlayerControlSystem.h
src/include/: config.h.in
src/movement/: MovementSystem.cpp  PhysicsSystem.cpp
src/rendering/: RenderObject.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  Vertex.h
src/rendering/shaders/: screen_frag.glsl  screen_vert.glsl  single_tex_frag.glsl  single_tex_vert.glsl  solid_color_frag.glsl  solid_color_vert.glsl
src/util/: coordinates.h  math.h
src/utils/: math.h  wavefront.h
src/world/: ChunkLoadingSystem.cpp  ChunkLoadingSystem.h  ChunkManager.cpp  ChunkManager.h  ChunkRenderSystem.cpp  ChunkRenderSystem.h  WorldChunk.cpp  WorldChunk.h
test/: CMakeLists.txt  test_collisions.cpp  test_entities.cpp  test_renderer.cpp  tests.cpp
